Fix up the example name test that is no longer relevant. Add text shadow to badges with light background to make it more readable.

--- a/report/main/ui/colors.less
+++ b/report/main/ui/colors.less
@@ -30,7 +30,7 @@
 @color-accent-contrast-tinted: lighten(@color-accent, 30%);
 
 
-@color-complement: orange;
+@color-complement: hsl(39, 100%, 50%);
 
 
 .theme-light {
