--- a/report/main/ui/component-page.less
+++ b/report/main/ui/component-page.less
@@ -82,12 +82,14 @@
         .badge();
         background-color: var(--color-accent);
         color: var(--color-accent-contrast);
+        text-shadow: 0 0 2px hsla(0, 100%, 0%, 0.8);
       }
 
       .todo-badge {
         .badge();
         background-color: var(--color-complement);
         color: var(--color-accent-contrast);
+        text-shadow: 0 0 2px hsla(0, 100%, 10%, 0.8);
       }
 
       .tag-badge {
