--- a/report/main/ui/overview-page.less
+++ b/report/main/ui/overview-page.less
@@ -39,6 +39,8 @@
     .strip-link-style();
 
     .component-name {
+      border-bottom: 2px solid var(--color-base-4);
+
       &:hover {
         background-color: var(--color-accent);
         color: var(--color-accent-contrast);
